--- a/styles.css
+++ b/styles.css
@@ -12,45 +12,62 @@ html, body {
   position: relative; 
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) { 
   #info {
-    position: fixed; 
-    bottom: 0;
-    left: 0;
-    right: 0; 
-    max-height: 50%; 
-    overflow-y: auto; 
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-    padding: 15px; 
+    position: absolute; 
+    top: 0;
+    left: -550px; 
+    max-width: 550px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 30px;
+    border-bottom-right-radius: 30px;
+    z-index: 1000;
+    background-image: url(https://www.будьвдвижении.рф/_nuxt/img/bg-aside-department.8663adf.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-size: 25%;
+    box-shadow: 0px -4px 63px 0px rgba(0,0,0,.09);
+    transition: transform 0.3s ease; 
+    height: auto; 
   }
+  
+  #info.show {
+    transform: translateX(550px); 
+  }
+  
+  #info.hide {
+    transform: translateX(0); 
+  }
+
 }
 
-#info {
-  position: fixed; 
-  top: 0;
-  left: -550px; 
-  max-width: 550px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 30px;
-  border-bottom-right-radius: 30px;
-  z-index: 1000;
-  background-image: url(https://www.будьвдвижении.рф/_nuxt/img/bg-aside-department.8663adf.png);
-  background-repeat: no-repeat;
-  background-position: right bottom;
-  background-size: 25%;
-  box-shadow: 0px -4px 63px 0px rgba(0,0,0,.09);
-  transition: transform 0.3s ease; 
-  height: auto; 
-}
+@media (max-width: 767px) { 
+  #info {
+    position: absolute; 
+    left: 0;
+    bottom: -100%;
+    max-height: 225px; 
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 8px; 
+    border-top-left-radius: 20px; 
+    border-top-right-radius: 20px;
+    z-index: 1000;
+    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, bottom 0.3s ease; 
+    width: 100%; 
+    height: auto;
+    font-size: 11px; 
+  }
 
-#info.show {
-  transform: translateX(550px); 
-}
+  #info.show {
+    bottom: 0; 
+  }
 
-#info.hide {
-  transform: translateX(0); 
+  #info.hide {
+    bottom: -100%; 
+  }
 }
 
 .regional-item-info__block-value._list a {
